added descriptions and images to a few servicese pages

--- a/services/drainage-systems.html
+++ b/services/drainage-systems.html
@@ -299,48 +299,34 @@
                         <div class="row">
                             <div class="col-md-9">
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-md-12">
                                         <div class="services-post">
-                                            <img
-                                                src="../upload/others/7.jpg"
-                                                alt=""
-                                            />
+                                            <center>
+                                                <img
+                                                style="width:500px; height:auto"
+                                                    
+                                                    src="../upload/others/repair.jpg"
+                                                    alt=""
+                                                />
+                                            </center>
+                                            
                                             <div class="services-content">
-                                                <h2>Repair</h2>
+                                                <h2>Drainage System Services in Stamford, CT</h2>
                                                 <p>
-                                                    Aenean sed justo tincidunt,
-                                                    vulputate nisi sit amet,
-                                                    rutrum ligula. Pellentesque
-                                                    dictum aliquam ornare. Sed
-                                                    elit lectus.
+                                                    For dependable drainage system repair services in Stamford, CT, and neighboring areas, look no further. Our skilled team specializes in efficient drainage system repairs, addressing issues like water pooling, slow drainage, and erosion. 
                                                 </p>
                                                 <p>
-                                                    Lorem ipsum dolor sit amet,
-                                                    consectetur adipisicing
-                                                    elit, sed do eiusmod tempor
-                                                    incididunt ut labore et
-                                                    dolore magna aliqua. Ut enim
-                                                    ad minim veniam, quis
-                                                    nostrud exercitation ullamco
-                                                    laboris nisi ut aliquip ex
-                                                    ea commodo consequat.
+                                                    With a deep understanding of the local terrain, we provide tailored solutions that effectively manage water flow and prevent further damage. Whether it's a residential property or a commercial site, our experts swiftly diagnose problems and implement precise repairs. 
                                                 </p>
                                                 <p>
-                                                    Duis aute irure dolor in
-                                                    reprehenderit in voluptate
-                                                    velit esse cillum dolore eu
-                                                    fugiat nulla pariatur.
-                                                    Excepteur sint occaecat
-                                                    cupidatat non proident, sunt
-                                                    in culpa qui officia
-                                                    deserunt mollit anim id est
-                                                    laborum.
+                                                    Count on us to restore proper water management and protect your property from potential water-related issues. Contact us today for reliable drainage system repair services tailored to Stamford's unique needs.
+
                                                 </p>
                                             </div>
                                         </div>
                                     </div>
 
-                                    <div class="col-md-6">
+                                    <!-- <div class="col-md-6">
                                         <div class="services-post">
                                             <img
                                                 src="../upload/others/maintanance.jpg"
@@ -379,7 +365,7 @@
                                                 </p>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
 
