--- a/services/excavation.html
+++ b/services/excavation.html
@@ -299,87 +299,32 @@
                         <div class="row">
                             <div class="col-md-9">
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-md-12">
                                         <div class="services-post">
-                                            <img
-                                                src="../upload/others/7.jpg"
-                                                alt=""
-                                            />
+                                            <center>
+                                                <img
+                                                style="width:500px; height:auto"
+                                                    
+                                                    src="../upload/others/repair.jpg"
+                                                    alt=""
+                                                />
+                                            </center>
                                             <div class="services-content">
-                                                <h2>Repair</h2>
+                                                <h2>Excavation Services in Stamford, CT</h2>
                                                 <p>
-                                                    Aenean sed justo tincidunt,
-                                                    vulputate nisi sit amet,
-                                                    rutrum ligula. Pellentesque
-                                                    dictum aliquam ornare. Sed
-                                                    elit lectus.
+                                                    Searching for swift and dependable excavation repair services in Stamford, CT, and nearby areas? Your search ends here. Our specialized team excels in expert excavation repairs, addressing concerns within underground plumbing such as drainage systems, sanitary sewer lines, water mains, water services and more. 
                                                 </p>
                                                 <p>
-                                                    Lorem ipsum dolor sit amet,
-                                                    consectetur adipisicing
-                                                    elit, sed do eiusmod tempor
-                                                    incididunt ut labore et
-                                                    dolore magna aliqua. Ut enim
-                                                    ad minim veniam, quis
-                                                    nostrud exercitation ullamco
-                                                    laboris nisi ut aliquip ex
-                                                    ea commodo consequat.
+                                                    With a keen understanding of the local terrain, we provide tailor-made solutions that restore stability and functionality. Whether it's residential or commercial, our adept technicians promptly diagnose issues and execute precise repairs. 
                                                 </p>
                                                 <p>
-                                                    Duis aute irure dolor in
-                                                    reprehenderit in voluptate
-                                                    velit esse cillum dolore eu
-                                                    fugiat nulla pariatur.
-                                                    Excepteur sint occaecat
-                                                    cupidatat non proident, sunt
-                                                    in culpa qui officia
-                                                    deserunt mollit anim id est
-                                                    laborum.
+                                                    Rely on us to fortify your property's foundation and ensure the integrity of your underground systems. Contact us today for excavation repair services optimized for Stamford's unique landscape.
                                                 </p>
                                             </div>
                                         </div>
                                     </div>
 
-                                    <div class="col-md-6">
-                                        <div class="services-post">
-                                            <img
-                                                src="../upload/others/maintanance.jpg"
-                                                alt=""
-                                            />
-                                            <div class="services-content">
-                                                <h2>New Installation</h2>
-                                                <p>
-                                                    Aenean sed justo tincidunt,
-                                                    vulputate nisi sit amet,
-                                                    rutrum ligula. Pellentesque
-                                                    dictum aliquam ornare. Sed
-                                                    elit lectus.
-                                                </p>
-                                                <p>
-                                                    Lorem ipsum dolor sit amet,
-                                                    consectetur adipisicing
-                                                    elit, sed do eiusmod tempor
-                                                    incididunt ut labore et
-                                                    dolore magna aliqua. Ut enim
-                                                    ad minim veniam, quis
-                                                    nostrud exercitation ullamco
-                                                    laboris nisi ut aliquip ex
-                                                    ea commodo consequat.
-                                                </p>
-                                                <p>
-                                                    Duis aute irure dolor in
-                                                    reprehenderit in voluptate
-                                                    velit esse cillum dolore eu
-                                                    fugiat nulla pariatur.
-                                                    Excepteur sint occaecat
-                                                    cupidatat non proident, sunt
-                                                    in culpa qui officia
-                                                    deserunt mollit anim id est
-                                                    laborum.
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    
                                 </div>
                             </div>
 
