--- a/services/index.html
+++ b/services/index.html
@@ -302,39 +302,19 @@
                                     <div class="col-md-6">
                                         <div class="services-post">
                                             <img
-                                                src="../upload/others/7.jpg"
+                                                src="../upload/others/repair.jpg"
                                                 alt=""
                                             />
                                             <div class="services-content">
                                                 <h2>Repair</h2>
                                                 <p>
-                                                    Aenean sed justo tincidunt,
-                                                    vulputate nisi sit amet,
-                                                    rutrum ligula. Pellentesque
-                                                    dictum aliquam ornare. Sed
-                                                    elit lectus.
+                                                    For efficient and reliable excavation repairs in Stamford, CT, and nearby areas, look no further. Our experienced team specializes in expert excavation repair services, addressing issues like drainage system problems, water main leaks, and sewer line disruptions. 
                                                 </p>
                                                 <p>
-                                                    Lorem ipsum dolor sit amet,
-                                                    consectetur adipisicing
-                                                    elit, sed do eiusmod tempor
-                                                    incididunt ut labore et
-                                                    dolore magna aliqua. Ut enim
-                                                    ad minim veniam, quis
-                                                    nostrud exercitation ullamco
-                                                    laboris nisi ut aliquip ex
-                                                    ea commodo consequat.
+                                                    We understand the unique challenges posed by the local terrain, ensuring accurate solutions that stand the test of time. With a focus on precision and promptness, our skilled technicians are equipped to handle repairs of all scales, from minor fixes to extensive restoration. 
                                                 </p>
                                                 <p>
-                                                    Duis aute irure dolor in
-                                                    reprehenderit in voluptate
-                                                    velit esse cillum dolore eu
-                                                    fugiat nulla pariatur.
-                                                    Excepteur sint occaecat
-                                                    cupidatat non proident, sunt
-                                                    in culpa qui officia
-                                                    deserunt mollit anim id est
-                                                    laborum.
+                                                    Count on us for top-notch repair services tailored to the Stamford community's specific needs. Contact us today for dependable and effective excavation repair solutions.
                                                 </p>
                                             </div>
                                         </div>
@@ -343,39 +323,19 @@
                                     <div class="col-md-6">
                                         <div class="services-post">
                                             <img
-                                                src="../upload/others/maintanance.jpg"
+                                                src="../upload/others/new_install.jpg"
                                                 alt=""
                                             />
                                             <div class="services-content">
                                                 <h2>New Installation</h2>
                                                 <p>
-                                                    Aenean sed justo tincidunt,
-                                                    vulputate nisi sit amet,
-                                                    rutrum ligula. Pellentesque
-                                                    dictum aliquam ornare. Sed
-                                                    elit lectus.
+                                                    Looking for expert excavation services for new installations in Stamford, CT, and nearby areas? You've found your solution. Our dedicated team specializes in precision excavation for new construction projects. 
                                                 </p>
                                                 <p>
-                                                    Lorem ipsum dolor sit amet,
-                                                    consectetur adipisicing
-                                                    elit, sed do eiusmod tempor
-                                                    incididunt ut labore et
-                                                    dolore magna aliqua. Ut enim
-                                                    ad minim veniam, quis
-                                                    nostrud exercitation ullamco
-                                                    laboris nisi ut aliquip ex
-                                                    ea commodo consequat.
+                                                    From laying the groundwork for water mains and drainage systems to creating solid foundations, our skilled professionals ensure accurate and efficient installations. We understand the local landscape and its demands, providing tailored solutions that meet Stamford's unique requirements. 
                                                 </p>
                                                 <p>
-                                                    Duis aute irure dolor in
-                                                    reprehenderit in voluptate
-                                                    velit esse cillum dolore eu
-                                                    fugiat nulla pariatur.
-                                                    Excepteur sint occaecat
-                                                    cupidatat non proident, sunt
-                                                    in culpa qui officia
-                                                    deserunt mollit anim id est
-                                                    laborum.
+                                                    Whether it's a residential or commercial project, our expertise guarantees top-quality results that align with your vision.  Connect with us today to discuss your new installation needs and bring your projects to life.
                                                 </p>
                                             </div>
                                         </div>
