--- a/services/sanitary-sewers.html
+++ b/services/sanitary-sewers.html
@@ -299,87 +299,25 @@
                         <div class="row">
                             <div class="col-md-9">
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-md-12">
                                         <div class="services-post">
-                                            <img
-                                                src="../upload/others/7.jpg"
-                                                alt=""
-                                            />
+                                            
                                             <div class="services-content">
-                                                <h2>Repair</h2>
+                                                <h2>Sanitary Sewer Services in Stamford, CT</h2>
                                                 <p>
-                                                    Aenean sed justo tincidunt,
-                                                    vulputate nisi sit amet,
-                                                    rutrum ligula. Pellentesque
-                                                    dictum aliquam ornare. Sed
-                                                    elit lectus.
+                                                    In need of swift and dependable sanitary sewer repair services in Stamford, CT, and nearby areas? Your search ends here. Our dedicated team specializes in expert sanitary sewer repairs, addressing concerns within vital underground plumbing infrastructure such as sewage lines, water mains, and more. 
                                                 </p>
                                                 <p>
-                                                    Lorem ipsum dolor sit amet,
-                                                    consectetur adipisicing
-                                                    elit, sed do eiusmod tempor
-                                                    incididunt ut labore et
-                                                    dolore magna aliqua. Ut enim
-                                                    ad minim veniam, quis
-                                                    nostrud exercitation ullamco
-                                                    laboris nisi ut aliquip ex
-                                                    ea commodo consequat.
+                                                    From tackling issues like persistent blockages, sewage backups, to addressing corroded or collapsed pipes, we are equipped to handle a wide range of problems. 
                                                 </p>
                                                 <p>
-                                                    Duis aute irure dolor in
-                                                    reprehenderit in voluptate
-                                                    velit esse cillum dolore eu
-                                                    fugiat nulla pariatur.
-                                                    Excepteur sint occaecat
-                                                    cupidatat non proident, sunt
-                                                    in culpa qui officia
-                                                    deserunt mollit anim id est
-                                                    laborum.
+                                                    With a profound understanding of the local terrain, we provide tailored solutions that reinstate integrity and functionality. Whether it's residential or commercial, our adept technicians promptly diagnose issues and execute precise repairs. Reach out today for sanitary sewer repair services in and around Stamford.
                                                 </p>
                                             </div>
                                         </div>
                                     </div>
 
-                                    <div class="col-md-6">
-                                        <div class="services-post">
-                                            <img
-                                                src="../upload/others/maintanance.jpg"
-                                                alt=""
-                                            />
-                                            <div class="services-content">
-                                                <h2>New Installation</h2>
-                                                <p>
-                                                    Aenean sed justo tincidunt,
-                                                    vulputate nisi sit amet,
-                                                    rutrum ligula. Pellentesque
-                                                    dictum aliquam ornare. Sed
-                                                    elit lectus.
-                                                </p>
-                                                <p>
-                                                    Lorem ipsum dolor sit amet,
-                                                    consectetur adipisicing
-                                                    elit, sed do eiusmod tempor
-                                                    incididunt ut labore et
-                                                    dolore magna aliqua. Ut enim
-                                                    ad minim veniam, quis
-                                                    nostrud exercitation ullamco
-                                                    laboris nisi ut aliquip ex
-                                                    ea commodo consequat.
-                                                </p>
-                                                <p>
-                                                    Duis aute irure dolor in
-                                                    reprehenderit in voluptate
-                                                    velit esse cillum dolore eu
-                                                    fugiat nulla pariatur.
-                                                    Excepteur sint occaecat
-                                                    cupidatat non proident, sunt
-                                                    in culpa qui officia
-                                                    deserunt mollit anim id est
-                                                    laborum.
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    
                                 </div>
                             </div>
 
